@@ -1,0 +1,1 @@
+val read : Pdfio.input -> Pdf.t
