@@ -1,6 +1,7 @@
 2.5 (Upcoming 2022)
 
-o TODO: Vendor in camlp-streams module before deprecation
+o Vendored in camlp-streams module before deprecation
+o Can read as well as write PDFs in JSON format with -input-json
 o Environment variable CPDF_REPRODUCIBLE_DATES for testing
 o Environment variable CPDF_DEBUG for -debug
 o Effectively make stderr unbuffered
